--- a/password-generator/style.css
+++ b/password-generator/style.css
@@ -25,13 +25,14 @@ body {
 }
 
 .pw {
-    font-size: 2rem;
+    font-size: 1.5rem;
     background-color: rebeccapurple;
     height: 70px;
     width: 100%;
     display: flex;
     align-items: center;
     position: relative;
+    overflow: auto;
 }
 
 .pw button {
@@ -43,7 +44,7 @@ body {
     position: absolute;
     bottom: 0;
     right: 0;
-    transform: translate(0, 50%);
+    transform: translate(0, 20%);
     transition: opacity 0.2s ease;
     opacity: 0;
     cursor: pointer;
@@ -73,4 +74,5 @@ body {
     padding: 0.75rem;
     margin-top: 1rem;
     width: 100%;
+    cursor: pointer;
 }
